refactor: rename `/check` endpoints to `/compliance-check`
